# minesweeper-c-eilco

./: CMakeLists.txt  LICENSE  README.md  games_completed_easy.txt  games_completed_hard.txt  games_non_completed.txt  main.c
include/: database_management.h  game.h  interface.h
src/: database_management.c  game.c  interface.c
